--- a/WebApplication2/Views/_Layout.cshtml
+++ b/WebApplication2/Views/_Layout.cshtml
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
+    <script src="~/Scripts/angular-ui-router.min.js"></script>
+    <script src="~/Scripts/angular-resource.min.js"></script>
+    <script src="~/App/testApp.module.js"></script>
+    <script src="~/App/testApp.listUserCtrl.controller.js"></script>
+    <script src="~/App/testApp.userSportComplex.service.js"></script>
+    <script src="~/App/testApp.editUserCtrl.controller.js"></script>
 </head>
 <body>
     <div>
